Use the submit event for organization entry so keyboard submissions work.

--- a/client/modules/home/home.html
+++ b/client/modules/home/home.html
@@ -1,5 +1,7 @@
 <template name="home">
-  <label>Enter your organization name:</label>
-  <input id="enter-organization" type="textfield">
-  <input id="submit-organization" type="submit">
+  <form name="enter-organization">
+    <label>Enter your organization name:</label>
+    <input id="enter-organization" type="textfield">
+    <input id="submit-organization" type="submit">
+  </form>
 </template>
