--- a/src/client/modules/github/github.html
+++ b/src/client/modules/github/github.html
@@ -1,21 +1,44 @@
 <template name="github">
-  <h2>{{orgName}} contributions</h2>
-
-  Total: {{totalCount}}
-  <ul>
-  {{#each userData}}
-  <li>
-    <a href="{{member.html_url}}">
-      <div>{{member.login}}</div>
-      <div><img src="{{member.avatar_url}}&s=84"></div>
-    </a>
-    Total: {{count}}
-    <ul>
-    {{#each contributions}}
-      <li>Type: {{type}} / Repo: <a href="http://github.com/{{repo.name}}">{{repo.name}}</a></li>
-    {{/each}}
-    </ul>
-  </li>
-  {{/each}}
-  </ul> 
+	<div class="col-lg-4">
+		<div class="org-sidebar-details jumbotron">
+			{{#each orgData}}
+				<img class="circle" src="{{avatar_url}}" alt="logo">
+				<h2>{{orgName}} contributions</h2>
+				{{#if public_repos}}
+					Public Repositories: <b>{{public_repos}}</b><br>
+				{{/if}}
+				{{#if created_at}}
+					Created: <b>{{formatDate created_at}}</b><br>
+				{{/if}}
+				{{#if blog}}
+					<a class="btn btn-primary btn-lg" href="{{blog}}">Blog</a><br>
+				{{/if}}
+			{{/each}}
+			Events Total: <b>{{totalCount}}</b>
+		</div>
+	</div>
+	<div class="member-details col-lg-8 list-group">
+		{{#each userData}}
+			<div class="list-group-item">
+				<a href="{{member.html_url}}">
+					<div class="row-picture">
+						<img class="circle" src="{{member.avatar_url}}&s=84" alt="icon">
+					</div>
+				</a>
+				<div class="well row-content">
+					<h3>{{member.login}}</h3>
+					<h3 class="list-group-item-heading">Total: {{count}}</h3>
+					<div id="circles"></div>
+					<ul class="user-activity">
+						{{#each contributions}}
+							<li>
+								<i class="{{activityIcon}}"></i>
+								Type: {{type}} / Repo: <a href="http://github.com/{{repo.name}}">{{repo.name}}</a>
+							</li>
+						{{/each}}
+					</ul>
+				</div>
+			</div>
+		{{/each}}
+	</div>
 </template>
